name: grid-proto
version: 0.2.0.0
synopsis: Grid-based, prototyping Game engine
description: Grid-based, prototyping Game engine
category: Game
homepage: https://github.com/jxv/grid-proto#readme
author: Joe Vargas
maintainer:
copyright: 2022 Joe Vargas
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

flag examples
  manual: True
  default: False

library
  exposed-modules:
      GridProto
  other-modules:
    GridProto.Internal.Core
    GridProto.Internal.Font
    GridProto.Internal.Runner
    GridProto.Internal.Sfx
    GridProto.Internal.Sfx.Bell
    GridProto.Internal.Sfx.Chimes
    GridProto.Internal.Sfx.Damage
    GridProto.Internal.Sfx.Explosion
    GridProto.Internal.Sfx.Jump
    GridProto.Internal.Sfx.Laser
    GridProto.Internal.Sfx.NoSelect
    GridProto.Internal.Sfx.Noise
    GridProto.Internal.Sfx.PowerUp
    GridProto.Internal.Sfx.Scroll
    GridProto.Internal.Sfx.Select
    GridProto.Internal.Sfx.Success
  hs-source-dirs:
      src
  build-depends:
      StateVar
    , base
    , bytestring
    , cereal
    , containers
    , linear
    , sdl2 == 2.5.3.2
    , sdl2-gfx
    , sdl2-mixer
    , sdl2-ttf
    , text
    , vector
  default-language: Haskell2010

executable arrows-example
  hs-source-dirs: examples
  main-is: Arrows.hs
  ghc-options: -main-is Arrows
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010

executable board-example
  hs-source-dirs: examples
  main-is: Board.hs
  ghc-options: -main-is Board
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010

executable controller-example
  hs-source-dirs: examples
  main-is: Controller.hs
  ghc-options: -main-is Controller
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010

executable sound-example
  hs-source-dirs: examples
  main-is: Sound.hs
  ghc-options: -main-is Sound
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010

executable text-example
  hs-source-dirs: examples
  main-is: Text.hs
  ghc-options: -main-is Text
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010

executable viewport-example
  hs-source-dirs: examples
  main-is: Viewport.hs
  ghc-options: -main-is Viewport
  build-depends:
      base
    , grid-proto
  if flag(examples)
    buildable: True
  default-language: Haskell2010
